<resources>
    <string name="app_name">Dhammapada</string>
    <string name="app_en_name">DHAMMAPADA</string>
    <string name="app_mm_name">ဓမ္မပဒ</string>
    <string name="app_subtitle">A Practical Guide to Right Living</string>
    <string name="english">EN</string>
    <string name="myanmar">မြန်မာ</string>
    <string name="pali">ပါဠိ</string>

    <string name="hello_blank_fragment">Hello fragment</string>
    <string name="bookmark_one">Bookmark one ?</string>
    <string name="list_font">\uf0ca</string>
    <string name="square_font">\uf45c</string>
    <string name="star_font">\uf005</string>
    <string name="moon_font">\uf186</string>
    <string name="sun_font">\uf185</string>
    <string name="book_font">\uf02d</string>
    <string name="bookmark_font">\uf02e</string>
    <string name="share_font">\uf1e0</string>
    <string name="info_font">\uf05a</string>
    <string name="darklight_font">\uf53f</string>
    <string name="palette_font"></string>
    <string name="app_info"><![CDATA[The Dhammapada is a collection of sayings of the Buddha in verse form and one of the most widely read and best known Buddhist scriptures. The Dhammapada App With Pāḷi, English, Myanmar, Burmese: ပါဠိ Language. \n\n English version is translated from the Pali by Acharya Buddharakkhita. Access to Insight (BCBS Edition), 30 November 2013, http://www.accesstoinsight.org.]]></string>
</resources>
