<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ItemActivity"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgTitle"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:scaleType="fitCenter"
            android:src="@mipmap/logo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtMenuTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="..."
            android:textSize="17sp"
            android:fontFamily="@font/impact"
            android:layout_margin="11dp"
            android:textColor="@color/colorAccent"
           android:layout_alignParentTop="true"

            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtMark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtMenuTitle"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/impact"
            android:gravity="center"
            android:text="1-20"
            android:textSize="19sp" />

    </RelativeLayout>


    
    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vpgList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/transparent">


    </androidx.viewpager.widget.ViewPager>

<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="60dp"
    android:layout_gravity="center_horizontal"
    >
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLangEn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/english"
        android:fontFamily="@font/impact"
        android:textSize="11sp"
        android:background="@drawable/rounded_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_margin="5dp"
        android:layout_marginBottom="10dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLangMM"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/myanmar"
        android:textSize="12sp"
        android:fontFamily="@font/mm3"
        android:background="@drawable/rounded_button"
        android:layout_toEndOf="@id/btnLangEn"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp"
        android:layout_marginBottom="10dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLangPali"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/pali"
        android:textSize="12sp"
        android:fontFamily="@font/mm3"
        android:background="@drawable/rounded_button"
        android:layout_toEndOf="@id/btnLangMM"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp"
        android:layout_marginBottom="10dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLangPaliRoman"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="Pāḷi"
        android:textSize="12sp"
        android:background="@drawable/rounded_button"
        android:layout_toEndOf="@id/btnLangPali"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp"
        android:layout_marginBottom="10dp"
        />


</RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:layout_gravity="bottom">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:scaleType="fitCenter"
            android:src="@mipmap/lotuslake" />

        <RelativeLayout
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="17dp"
            android:layout_marginEnd="10dp"
            >

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/imgbtnFav"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_button" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/ftvFav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_font"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:layout_centerInParent="true"
                android:fontFamily="@font/fasolid"
                />

        </RelativeLayout>



    <RelativeLayout
        android:layout_width="33dp"
        android:layout_height="33dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp"
        android:visibility="gone">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/imgbtnLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_button"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/ftvLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/star_font"
            android:fontFamily="@font/fasolid"
            android:layout_centerInParent="true"
            />

    </RelativeLayout>


        <RelativeLayout
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="17dp"
            >

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/imgbtnBack"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_button" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_font"
                android:fontFamily="@font/fasolid"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:layout_centerInParent="true"
                />

        </RelativeLayout>



    </RelativeLayout>


    </LinearLayout>
